--- a/index.html
+++ b/index.html
@@ -55,16 +55,16 @@
   <div class="container">
     <div class="col-6">
       <div class="container">
-        <div class="col-2">Nested 2 col</div>
-        <div class="col-2">Nested 2 col</div>
-        <div class="col-8">Nested 8 col</div>
+        <div class="col-2 relative"><span>Nested 2 col</span></div>
+        <div class="col-2 relative"><span>Nested 2 col</span></div>
+        <div class="col-8 relative"><span>Nested 8 col</span></div>
       </div>
     </div>
 
     <div class="col-6">
       <div class="container">
-        <div class="col-6">Nested 6 col</div>
-        <div class="col-6">Nested 6 col</div>
+        <div class="col-6 relative"><span>Nested 6 col</span></div>
+        <div class="col-6 relative"><span>Nested 6 col</span></div>
       </div>
     </div>
   </div>
