--- a/index.html
+++ b/index.html
@@ -12,42 +12,42 @@
 
   <!-- prima serie -->
   <div class="container">
-    <div class="col-1">1 col</div>
-    <div class="col-1">1 col</div>
-    <div class="col-1">1 col</div>
-    <div class="col-1">1 col</div>
-    <div class="col-1">1 col</div>
-    <div class="col-1">1 col</div>
-    <div class="col-1">1 col</div>
-    <div class="col-1">1 col</div>
-    <div class="col-1">1 col</div>
-    <div class="col-1">1 col</div>
-    <div class="col-1">1 col</div>
-    <div class="col-1">1 col</div>
+    <div class="col-1"><span>1 col</span></div>
+    <div class="col-1"><span>1 col</span></div>
+    <div class="col-1"><span>1 col</span></div>
+    <div class="col-1"><span>1 col</span></div>
+    <div class="col-1"><span>1 col</span></div>
+    <div class="col-1"><span>1 col</span></div>
+    <div class="col-1"><span>1 col</span></div>
+    <div class="col-1"><span>1 col</span></div>
+    <div class="col-1"><span>1 col</span></div>
+    <div class="col-1"><span>1 col</span></div>
+    <div class="col-1"><span>1 col</span></div>
+    <div class="col-1"><span>1 col</span></div>
   </div>
   <!-- / prima serie -->
 
   <!-- seconda serie -->
   <div class="container">
-    <div class="col-12">12 col</div>
+    <div class="col-12"><span>12 col</span></div>
   </div>
   <!-- / seconda serie -->
 
   <!-- terza serie -->
   <div class="container">
-    <div class="col-8">8 col</div>
-    <div class="col-2">2 col</div>
-    <div class="col-2">2 col</div>
+    <div class="col-8"><span>8 col</span></div>
+    <div class="col-2"><span>2 col</span></div>
+    <div class="col-2"><span>2 col</span></div>
   </div>
   <!-- / terza serie -->
 
   <!-- quarta serie -->
   <div class="container">
-    <div class="col-1">1 col</div>
-    <div class="col-2">2 col</div>
-    <div class="col-2">2 col</div>
-    <div class="col-6">6 col</div>
-    <div class="col-1">1 col</div>
+    <div class="col-1"><span>1 col</span></div>
+    <div class="col-2"><span>2 col</span></div>
+    <div class="col-2"><span>2 col</span></div>
+    <div class="col-6"><span>6 col</span></div>
+    <div class="col-1"><span>1 col</span></div>
   </div>
   <!-- / quarta serie -->
 
@@ -55,16 +55,16 @@
   <div class="container">
     <div class="col-6">
       <div class="container">
-        <div class="col-2 relative"><span>Nested 2 col</span></div>
-        <div class="col-2 relative"><span>Nested 2 col</span></div>
-        <div class="col-8 relative"><span>Nested 8 col</span></div>
+        <div class="col-2 "><span>Nested 2 col</span></div>
+        <div class="col-2 "><span>Nested 2 col</span></div>
+        <div class="col-8 "><span>Nested 8 col</span></div>
       </div>
     </div>
 
     <div class="col-6">
       <div class="container">
-        <div class="col-6 relative"><span>Nested 6 col</span></div>
-        <div class="col-6 relative"><span>Nested 6 col</span></div>
+        <div class="col-6 "><span>Nested 6 col</span></div>
+        <div class="col-6 "><span>Nested 6 col</span></div>
       </div>
     </div>
   </div>
